# gllabel

./: .gitignore  Cargo.toml  demo.cpp  makefile
include/: gllabel.hpp
lib/: data.hpp  gllabel.cpp  outline.cpp  types.cpp  util.cpp  util.hpp  util.py  vgrid.cpp  vgrid.hpp
src/: bezier.rs  buffer.rs  grid.rs  lib.rs  test_data.rs
src/shaders/: text.frag  text.vert
ui/: Cargo.toml
ui/src/: .main.rs.rustfmt  gltext.rs  main.rs
